# baseline_json_editor

./: README.md
baseline_json_editor/: app.py  baseline_architecture_overview.txt  pyproject.toml  styles.py  utils.py
baseline_json_editor/baseline_json_editor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
baseline_json_editor/converter/: __init__.py  docx_exporter.py  docx_to_baseline.py  fast_api_converter.py  html_exporter.py  pdf_exporter.py  pdf_to_baseline.py  schema.py
fast_vision/: README.md  cli.py  output.json  output2.json  output_docx.json  pyproject.toml
fast_vision/documents/: Model_Inventory.docx
fast_vision/fast_vision/: __init__.py  pipeline.py  schema.py
fast_vision/fast_vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fast_vision/fast_vision/geometry/: block_builder.py  char_extractor.py  docx_extractor.py  line_builder.py  table_extractor.py  word_builder.py
fast_vision/fast_vision/merger/: block_matcher.py  schema_assembler.py
fast_vision/fast_vision/styles/: style_normalizer.py
fast_vision/fast_vision/vision/: api_tagger.py  page_renderer.py  prompts.py
fast_vision/tests/: test_pipeline.py
